# My-first-Rag-Fin-research-assistant-

./: .dockerignore  .env.example  .gitignore  1. Clone the repository and enter it  10. Run the evaluation framework  11. Quick smoke test (upload a document and ask a question)  5. Set up the frontend (optional)  9. Run the test suite  CLAUDE.md  Makefile  README.md  docker-compose.yml  }
backend/: config.py  logging_config.py  main.py  pyproject.toml  requirements.txt
backend/api/: dependencies.py
backend/chunking/: chunker.py
backend/database/: sqlite_db.py
backend/embeddings/: embedding_model.py
backend/evaluation/: __init__.py  benchmark.json  benchmark_queries.json  evaluator.py  faithfulness_evaluator.py  retrieval_evaluator.py  run_evaluation.py  run_full_evaluation.py  sample_queries.jsonl
backend/ingestion/: metadata_extractor.py  pipeline.py
backend/llm/: ollama_client.py  prompt_builder.py
backend/models/: __init__.py  chunk.py  document.py  query.py
backend/parsing/: base.py  factory.py  html_parser.py  pdf_parser.py  text_parser.py
backend/reranking/: reranker.py
backend/retrieval/: bm25_index.py  fusion.py  hybrid_retriever.py  retriever.py  timeline.py
backend/services/: chat_service.py  memory.py  query_entity_extractor.py
backend/tests/: test_bm25_index.py  test_chat_service.py  test_chunker.py  test_config.py  test_evaluator.py  test_fusion.py  test_hybrid_retriever.py  test_metadata_extractor.py  test_models.py  test_parser.py  test_prompt_builder.py  test_query_entity_extractor.py  test_retrieval_evaluator.py  test_timeline.py  (+2 more)
(+36 files in other folders)
